archivos de estilo, cambio en templates

--- a/FinanzasBGX.Web/web/template.xhtml
+++ b/FinanzasBGX.Web/web/template.xhtml
@@ -1,21 +1,81 @@
-<?xml version='1.0' encoding='UTF-8' ?> 
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
-    <h:head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title><ui:insert name="title">Default Title</ui:insert></title>
-<h:outputStylesheet name="css/jsfcrud.css"/>
-    </h:head>
-
-    <h:body>
-        <h1>
-            <ui:insert name="title">Default Title</ui:insert>
-        </h1>
-        <p>
-            <ui:insert name="body">Default Body</ui:insert>
-        </p>
-    </h:body>
-
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html">
+<ui:composition template="/master_template.xhtml">
+    <ui:define name="menu">
+        <ui:include src="/menu.xhtml" />
+    </ui:define>
+   
+    <ui:define name="content">
+        <br/>
+        <br/>
+        <!-- <div class="col-3"> -->
+        <!-- Navigation sidebar -->
+        <!--<div class="docs-sidebar">
+            <br/>
+            <ul class="nav nav-bordered">
+                <li>
+                <h:form>
+                    <h:commandLink action="/competencia/List" value="Competencias"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/curso/List" value="Cursos"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/departamento/List" value="Departamentos"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/documento/List" value="Documentos"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/empleado/List" value="Empleados"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/evaluacion/List" value="Evaluaciones"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/perfil/List" value="Perfil"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/rol/List" value="Roles"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/usuario/List" value="Usuarios"/>
+                </h:form>
+                </li>
+            </ul>
+        </div> -->
+        <!-- Navigation sidebar -->
+       <!--
+        </div>
+       -->
+        <div class="col-2">
+            <h1>
+                <ui:insert name="title">Default Title</ui:insert>
+            </h1>
+            <ui:insert name="body"></ui:insert>
+        </div>
+    </ui:define>
+    <ui:define name="footer">
+        <ui:include src="/footer.xhtml" />
+    </ui:define>
+</ui:composition>
 </html>
