--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -1,13 +1,16 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Facelet Title</title>
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
-        Hello from Facelets
+        <ui:composition template="/template.xhtml">
+        <!-- Hello from Facelets
         <br />
         <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
         <br />
@@ -41,24 +44,8 @@
         <br />
         <h:link outcome="/usuario/List" value="Show All Usuario Items"/>
         <br />
-        <h:link outcome="/venta/List" value="Show All Venta Items"/>
+        <h:link outcome="/venta/List" value="Show All Venta Items"/> -->
+        </ui:composition>
     </h:body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
 
