--- a/FinanzasBGX.Web/web/menu.xhtml
+++ b/FinanzasBGX.Web/web/menu.xhtml
@@ -16,9 +16,9 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ventas<b class="caret bottom-up"></b></a>
               <ul class="dropdown-menu bottom-up pull-right">
-                <li><a href="#">Ventas por mes</a></li>
-                <li><a href="#">Ventas por distribuidor</a></li>
-                <!-- <li><a href="#">Gráficas</a></li> -->
+                <li><a href="#">por mes</a></li>
+                <li><a href="#">por distribuidor</a></li>
+                <li><a href="#">Gráficas</a></li>
               </ul>
             </li>
              <li class="dropdown">
