cambios al menu

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -6,11 +6,10 @@
       xmlns:f="http://java.sun.com/jsf/core">
     <h:head>
         <title>Facelet Title</title>
-        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
         <ui:composition template="/template.xhtml">
-        <!-- Hello from Facelets
+         Hello from Facelets
         <br />
         <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
         <br />
@@ -44,7 +43,7 @@
         <br />
         <h:link outcome="/usuario/List" value="Show All Usuario Items"/>
         <br />
-        <h:link outcome="/venta/List" value="Show All Venta Items"/> -->
+        <h:link outcome="/venta/List" value="Show All Venta Items"/> 
         </ui:composition>
     </h:body>
 </html>
