--- a/FinanzasBGX.Web/web/menu.xhtml
+++ b/FinanzasBGX.Web/web/menu.xhtml
@@ -14,24 +14,25 @@
           <ul class="nav docs-navbar-menu">
             <li><a class="brand" href="index.xhtml">BGX</a></li>
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Ventas<b class="caret bottom-up"></b></a>
-              <ul class="dropdown-menu bottom-up pull-right">
-                <li><a href="#">Ventas por mes</a></li>
-                <li><a href="#">Ventas por distribuidor</a></li>
-                <!-- <li><a href="#">Gráficas</a></li> -->
-              </ul>
+                <h:link class="dropdown-toggle" value="Ventas">
+                </h:link>
             </li>
              <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#">Compras<b class="caret bottom-up"></b></a>
-              <ul class="dropdown-menu bottom-up pull-right">
-                <li><a href="#">por Mes</a></li>
-                <li><a href="#">por Pieza</a></li>
-                <li><a href="#">por Proveedor</a></li>
-              </ul>
+                <h:link class="dropdown-toggle" value="Compras">
+                </h:link>
             </li>
-            <li class=""><a href="#">Pendiente por Cobrar</a></li>
-            <li class=""><a href="#">Pendiente por Producir</a></li>
-            <li class=""><a href="#">Inventario</a></li>
+            <li class="">
+                <h:link class="dropdown-toggle" value="Pendiente por Cobrar">
+                </h:link>
+            </li>
+            <li class="">
+                <h:link class="dropdown-toggle" value="Pendiente por Producir">
+                </h:link>
+            </li>
+            <li class="">
+                <h:link class="dropdown-toggle" value="Inventario">
+                </h:link>
+            </li>
           </ul>
           <!--form action="" method="get" accept-charset="utf-8" class="navbar-form pull-right search-navbar-form">
             <div class="form-fields">
