--- a/FinanzasBGX.Web/web/menu.xhtml
+++ b/FinanzasBGX.Web/web/menu.xhtml
@@ -12,7 +12,7 @@
       <div class="nav-collapse collapse">
         <nav id="menu">
           <ul class="nav docs-navbar-menu">
-            <li><a class="brand" href="index.xhtml">BGX</a></li>
+            <li><a class="brand" href="index.xhtml">BGX: Finanzas</a></li>
             <li class="dropdown">
                 <h:link class="dropdown-toggle" value="Ventas">
                 </h:link>
