cambio a menu e index

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -8,43 +8,14 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <ui:composition template="/template.xhtml">
+        <!--<ui:composition template="/template.xhtml">
          Hello from Facelets
         <br />
         <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
         <br />
         <h:link outcome="/componente/List" value="Show All Componente Items"/>
         <br />
-        <h:link outcome="/compra/List" value="Show All Compra Items"/>
-        <br />
-        <h:link outcome="/compraComponente/List" value="Show All CompraComponente Items"/>
-        <br />
-        <h:link outcome="/estatus/List" value="Show All Estatus Items"/>
-        <br />
-        <h:link outcome="/modelo/List" value="Show All Modelo Items"/>
-        <br />
-        <h:link outcome="/modeloComponente/List" value="Show All ModeloComponente Items"/>
-        <br />
-        <h:link outcome="/orden/List" value="Show All Orden Items"/>
-        <br />
-        <h:link outcome="/ordenModelo/List" value="Show All OrdenModelo Items"/>
-        <br />
-        <h:link outcome="/pedido/List" value="Show All Pedido Items"/>
-        <br />
-        <h:link outcome="/pedidoComponente/List" value="Show All PedidoComponente Items"/>
-        <br />
-        <h:link outcome="/proveedor/List" value="Show All Proveedor Items"/>
-        <br />
-        <h:link outcome="/proveedorComponente/List" value="Show All ProveedorComponente Items"/>
-        <br />
-        <h:link outcome="/rol/List" value="Show All Rol Items"/>
-        <br />
-        <h:link outcome="/tipoComponente/List" value="Show All TipoComponente Items"/>
-        <br />
-        <h:link outcome="/usuario/List" value="Show All Usuario Items"/>
-        <br />
-        <h:link outcome="/venta/List" value="Show All Venta Items"/> 
-        </ui:composition>
+        </ui:composition>-->
     </h:body>
 </html>
 
