corrección a menu e index

--- a/FinanzasBGX.Web/web/index.xhtml
+++ b/FinanzasBGX.Web/web/index.xhtml
@@ -8,14 +8,14 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        <!--<ui:composition template="/template.xhtml">
-         Hello from Facelets
+        <ui:composition template="/template.xhtml">
+        <!-- Hello from Facelets
         <br />
         <h:link outcome="/cliente/List" value="Show All Cliente Items"/>
         <br />
         <h:link outcome="/componente/List" value="Show All Componente Items"/>
-        <br />
-        </ui:composition>-->
+        <br />-->
+        </ui:composition>
     </h:body>
 </html>
 
