--- a/FinanzasBGX.Web/web/menu.xhtml
+++ b/FinanzasBGX.Web/web/menu.xhtml
@@ -14,7 +14,7 @@
           <ul class="nav docs-navbar-menu">
             <li><h:link class="brand" outcome="/index.xhtml">BGX: Finanzas</h:link></li>
             <li class="dropdown">
-                <h:link value="Ventas">
+                <h:link value="Ventas" outcome="/venta/VentaMes">
                 </h:link>
             </li>
             <li class="dropdown">
