--- a/FinanzasBGX.Web/web/venta/VentaMes.xhtml
+++ b/FinanzasBGX.Web/web/venta/VentaMes.xhtml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -6,14 +6,11 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/template-ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListVentaTitle}"></h:outputText>
+            <h:outputText value="#{bundle.VentaMesTitle}"></h:outputText>
         </ui:define>
         <ui:define name="body">
-            <h:form styleClass="jsfcrud_list_form">
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:outputText escape="false" value="#{bundle.ListVentaEmpty}" rendered="#{ventaController.items.rowCount == 0}"/>
+            <h:form>
+                <h:outputText escape="false" value="#{bundle.VentaMesEmpty}" rendered="#{ventaController.items.rowCount == 0}"/>
                 <h:panelGroup rendered="#{ventaController.items.rowCount > 0}">
                     <h:outputText value="#{ventaController.pagination.pageFirstItem + 1}..#{ventaController.pagination.pageLastItem + 1}/#{ventaController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{ventaController.previous}" value="#{bundle.Previous} #{ventaController.pagination.pageSize}" rendered="#{ventaController.pagination.hasPreviousPage}"/>&nbsp;
@@ -77,13 +74,7 @@
                         </h:column>
                     </h:dataTable>
                 </h:panelGroup>
-                <br />
-                <h:commandLink action="#{ventaController.prepareCreate}" value="#{bundle.ListVentaCreateLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ListVentaIndexLink}"/>
             </h:form>
         </ui:define>
     </ui:composition>
-
 </html>
