Se modifica pagina principal para que muestre los indicadores y se agregan paginas de venta por distribuidor y graficas (vacias)

--- a/FinanzasBGX.Web/web/master_template.xhtml
+++ b/FinanzasBGX.Web/web/master_template.xhtml
@@ -8,6 +8,7 @@
         <h:outputStylesheet name="css/normalize.css"/>
         <h:outputStylesheet name="css/font-awesome.css"/>
         <h:outputStylesheet name="css/examples.css"/>
+        <h:outputStylesheet name="css/MasterCss.css"/>
         <h:outputLink rel="shortcut icon" value="img/favicon.ico"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"/>
