--- a/FinanzasBGX.Web/web/template-ventas.xhtml
+++ b/FinanzasBGX.Web/web/template-ventas.xhtml
@@ -18,17 +18,17 @@
             <ul class="nav nav-bordered">
                 <li>
                 <h:form>
-                    <h:commandLink action="/curso/List" value="por Mes"/>
+                    <h:commandLink action="/venta/VentaMes" value="por Mes"/>
                 </h:form>
                 </li>
                 <li>
                 <h:form>
-                    <h:commandLink action="/departamento/List" value="por Distribuidor"/>
+                    <h:commandLink action="/venta/Distribuidor" value="por Distribuidor"/>
                 </h:form>
                 </li>
                 <li>
                 <h:form>
-                    <h:commandLink action="/departamento/List" value="Gráficas"/>
+                    <h:commandLink action="/venta/Graficas" value="Gráficas"/>
                 </h:form>
                 </li>
             </ul>
