--- a/FinanzasBGX.Web/web/template.xhtml
+++ b/FinanzasBGX.Web/web/template.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core">
 <ui:composition template="/master_template.xhtml">
     <ui:define name="menu">
         <ui:include src="/menu.xhtml" />
@@ -10,67 +11,59 @@
     <ui:define name="content">
         <br/>
         <br/>
-        <!-- <div class="col-3"> -->
-        <!-- Navigation sidebar -->
-        <!--<div class="docs-sidebar">
-            <br/>
-            <ul class="nav nav-bordered">
-                <li>
-                <h:form>
-                    <h:commandLink action="/competencia/List" value="Competencias"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/curso/List" value="Cursos"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/departamento/List" value="Departamentos"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/documento/List" value="Documentos"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/empleado/List" value="Empleados"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/evaluacion/List" value="Evaluaciones"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/perfil/List" value="Perfil"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/rol/List" value="Roles"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/usuario/List" value="Usuarios"/>
-                </h:form>
-                </li>
-            </ul>
-        </div> -->
-        <!-- Navigation sidebar -->
-       <!--
-        </div>
-       -->
-        <div class="col-9">
+        <div class="col-12">
             <h1>
-                <ui:insert name="title">Default Title</ui:insert>
+                <ui:insert name="title">Indicadores</ui:insert>
             </h1>
             <ui:insert name="body">
+                <div class="divIndicadores">
+                    <div class="row">
+                        <div class="col-4">
+                            <h:outputText class="text-info" value="Total vendido"/>
+                        </div>
+                        <div class="col-4 divDerechoIndicador">
+                            <h:outputText class="text-info" value="Total comprado"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4 text-right">
+                            <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                        </div>
+                        <div class="col-4 text-right divDerechoIndicador">
+                           <h:outputText value="$ #{ventaController.totalSalesYear}"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="divIndicadores">
+                    <div class="row">
+                        <div class="col-4">
+                            <h:outputText class="text-info" value="Pendiente por cobrar"/>
+                        </div>
+                        <div class="col-4 divDerechoIndicador">
+                            <h:outputText class="text-info" value="Pendiente por producir"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4 text-right">
+                            <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                        </div>
+                        <div class="col-4 text-right divDerechoIndicador">
+                           <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="divIndicadores">
+                    <div class="row">
+                        <div class="col-4">
+                            <h:outputText class="text-info" value="Inventario"/>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4 text-right">
+                            <h:outputText class="text-right" value="$ #{ventaController.totalSalesYear}"/>
+                        </div>
+                    </div>
+                </div>
             </ui:insert>
         </div>
     </ui:define>
