diseno de VentaMes

--- a/FinanzasBGX.Web/web/venta/VentaMes.xhtml
+++ b/FinanzasBGX.Web/web/venta/VentaMes.xhtml
@@ -6,24 +6,36 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/template-ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.VentaMesTitle}"></h:outputText>
+            <h:outputText value="#{bundle.VentaMesTitle}" class="text-info"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
-                <h:outputText value="Año" />
-                <h:selectOneMenu value="#{ventaController.currentYear}">
-                        <f:selectItem itemValue="2013" itemLabel="2013" />
-   			<f:selectItem itemValue="2012" itemLabel="2012" />
-   			<f:selectItem itemValue="2011" itemLabel="2011" />
-                        <f:selectItem itemValue="2010" itemLabel="2010" />
-   		</h:selectOneMenu>
-                 <h:outputText value="Distribuidor" />
-                <h:selectOneMenu>               
-                    <f:selectItem itemValue="1" itemLabel="D1" />
-                    <f:selectItem itemValue="2" itemLabel="D2" />
-                    <f:selectItem itemValue="3" itemLabel="D3" />
-                </h:selectOneMenu>
-                 <h:commandLink  value="Buscar" immediate="true"/>
+                <div class="row">
+                    <div class="col-1">
+                        <h:outputText value="Año" />
+                    </div>
+                    <div class="col-2">
+                        <h:selectOneMenu value="#{ventaController.currentYear}">
+                            <f:selectItem itemValue="2013" itemLabel="2013" />
+                            <f:selectItem itemValue="2012" itemLabel="2012" />
+                            <f:selectItem itemValue="2011" itemLabel="2011" />
+                            <f:selectItem itemValue="2010" itemLabel="2010" />
+                        </h:selectOneMenu>
+                    </div>
+                    <div class="col-2">
+                        <h:outputText value="Distribuidor" />
+                    </div>
+                    <div class="col-2">
+                        <h:selectOneMenu>               
+                            <f:selectItem itemValue="1" itemLabel="D1" />
+                            <f:selectItem itemValue="2" itemLabel="D2" />
+                            <f:selectItem itemValue="3" itemLabel="D3" />
+                        </h:selectOneMenu>
+                    </div>
+                    <div class="col-1" style="padding: 0px !important">
+                        <h:commandLink  value="Buscar" immediate="true" class="btn btn-info"/>
+                    </div>
+                </div>
             </h:form>
         </ui:define>
     </ui:composition>
