corrección a menu e index

--- a/FinanzasBGX.Web/web/footer.xhtml
+++ b/FinanzasBGX.Web/web/footer.xhtml
@@ -8,11 +8,11 @@
   <p class="copyright">Copyright <a href="#" class="docs-license">BGX</a></p>
   <ul class="inline">
     <li><a href="#">Home</a></li>
-    <li><a href="#">Ventas</a></li>
-    <li><a href="#">Compras</a></li>
-    <li><a href="#">Pendiente por Cobrar</a></li>
-    <li><a href="#">Pendiente por Producir</a></li>
-    <li><a href="#">Inventario</a></li>
+    <li><a href="#">#{bundle.VentaTitle}</a></li>
+    <li><a href="#">#{bundle.CompraTitle}</a></li>
+    <li><a href="#">#{bundle.PendienteCobrarTitle}</a></li>
+    <li><a href="#">#{bundle.PendienteProducirTitle}</a></li>
+    <li><a href="#">#{bundle.InventarioTitle}</a></li>
   </ul>
 </div>
 </ui:composition>
