--- a/FinanzasBGX.Web/web/menu.xhtml
+++ b/FinanzasBGX.Web/web/menu.xhtml
@@ -14,23 +14,23 @@
           <ul class="nav docs-navbar-menu">
             <li><h:link class="brand" outcome="/index.xhtml">BGX: Finanzas</h:link></li>
             <li class="dropdown">
-                <h:link value="Ventas" outcome="/venta/VentaMes">
+                <h:link value="#{bundle.VentaTitle}" outcome="/venta/VentaMes">
                 </h:link>
             </li>
             <li class="dropdown">
-                <h:link value="Compras">
+                <h:link value="#{bundle.CompraTitle}">
                 </h:link>
             </li>
             <li class="">
-                <h:link value="Pendiente por Cobrar">
+                <h:link value="#{bundle.PendienteCobrarTitle}">
                 </h:link>
             </li>
             <li class="">
-                <h:link value="Pendiente por Producir">
+                <h:link value="#{bundle.PendienteProducirTitle}">
                 </h:link>
             </li>
             <li class="">
-                <h:link value="Inventario">
+                <h:link value="#{bundle.InventarioTitle}">
                 </h:link>
             </li>
           </ul>
