--- a/FinanzasBGX.Web/web/template-compras.xhtml
+++ b/FinanzasBGX.Web/web/template-compras.xhtml
@@ -19,22 +19,22 @@
                 <br/>
                 <li>
                 <h:form>
-                    <h:commandLink action="/venta/VentaMes" value="#{bundle.VentaMesTitle}"/>
+                    <h:commandLink action="/venta/CompraMes" value="#{bundle.CompraMesTitle}"/>
                 </h:form>
                 </li>
                 <li>
                 <h:form>
-                    <h:commandLink action="/venta/Distribuidor" value="#{bundle.VentaDistribuidorTitle}"/>
+                    <h:commandLink action="/venta/Componente" value="#{bundle.CompraComponenteTitle}"/>
+                </h:form>
+                </li>
+                <li>
+                <h:form>
+                    <h:commandLink action="/venta/Proveedor" value="#{bundle.CompraProveedorTitle}"/>
                 </h:form>
                 </li>
                 <li>
                 <h:form>
                     <h:commandLink action="/venta/Graficas" value="#{bundle.GraficasTitle}"/>
-                </h:form>
-                </li>
-                <li>
-                <h:form>
-                    <h:commandLink action="/venta/Comparar" value="#{bundle.VentaCompararTitle}"/>
                 </h:form>
                 </li>
             </ul>
@@ -44,7 +44,7 @@
        
         <div class="col-9">
             <h1>
-                <ui:insert name="title">#{bundle.VentaTitle}</ui:insert>
+                <ui:insert name="title">#{bundle.CompraTitle}</ui:insert>
             </h1>
             <ui:insert name="body"></ui:insert>
         </div>
