--- a/FinanzasBGX.Web/web/venta/Comparar.xhtml
+++ b/FinanzasBGX.Web/web/venta/Comparar.xhtml
@@ -6,7 +6,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="/template-ventas.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.GraficasTitle}"></h:outputText>
+            <h:outputText value="#{bundle.VentaCompararTitle}"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:form>
