--- a/FinanzasBGX.Web/web/venta/VentaMes.xhtml
+++ b/FinanzasBGX.Web/web/venta/VentaMes.xhtml
@@ -36,6 +36,20 @@
                         <h:commandLink  value="Buscar" immediate="true" class="btn btn-info"/>
                     </div>
                 </div>
+                <h:dataTable value="#{ventaController.totalSalesMonth}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListVentaTitle_id}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.mes}"/>
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">
+                                <h:outputText value="#{bundle.ListVentaTitle_cantidad}"/>
+                            </f:facet>
+                            <h:outputText value="#{item.total}"/>
+                        </h:column>
+                    </h:dataTable>
             </h:form>
         </ui:define>
     </ui:composition>
