--- a/FinanzasBGX.Web/web/usuario/Create.xhtml
+++ b/FinanzasBGX.Web/web/usuario/Create.xhtml
@@ -5,7 +5,7 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template/master-template.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.CreateUsuarioTitle}"></h:outputText>
         </ui:define>
