--- a/FinanzasBGX.Web/web/venta/Graficas.xhtml
+++ b/FinanzasBGX.Web/web/venta/Graficas.xhtml
@@ -4,7 +4,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <ui:composition template="/template-ventas.xhtml">
+    <ui:composition template="/template/ventas.xhtml">
         <ui:define name="title">
             <h:outputText value="#{bundle.GraficasTitle}"></h:outputText>
         </ui:define>
