Se borraron archivos de vista innecesarios. Se añadió la estructura de las vistas que se va a utilizar.

--- a/FinanzasBGX.Web/web/index_mes.xhtml
+++ b/FinanzasBGX.Web/web/index_mes.xhtml
@@ -33,7 +33,7 @@
             </div>
             <div class="col-9">
                 <h1>
-                    <ui:insert name="title">Indicadores del Año actual</ui:insert>
+                    <ui:insert name="title">Indicadores del Mes Actual</ui:insert>
                 </h1>
                 <ui:insert name="body">
                     <div class="divIndicadores">
